<resources>
    <string name="app_name" translatable="false">QuizApp</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_quizzes">Quizzes</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_login">Sign in</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--    Registration    -->
    <string name="registration">Registration</string>
    <string name="please_fill_name">Please fill name</string>
    <string name="please_fill_surname">Please fill surname</string>
    <string name="please_fill_login">Please fill login</string>
    <string name="please_fill_password">Please fill password</string>
    <string name="please_fill_repeat_password">Please fill repeat password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="registration_failed">Registration failed</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="student_mode">Student</string>
    <string name="tutor_mode">Tutor</string>
    <string name="register">Register</string>

    <!-- Login -->
    <string name="sign_in">Sign in</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="results_offline">Results offline</string>

    <!-- Home -->
    <string name="quizzes">Quizzes</string>
    <string name="subjects">Subjects</string>
    <string name="log_out">Log out</string>
    <string name="results">Results</string>

    <!-- Create/Add subject -->
    <string name="create_subject">Create subject</string>
    <string name="add_subject">Add subject</string>
    <string name="subject_name">Subject name</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="cannot_add_subject">Cannot add subject.</string>
    <string name="cannot_create_subject">Cannot create subject.</string>

    <!-- Add quiz -->
    <string name="correct_answer">Correct answer</string>
    <string name="first_incorrect_answer">First wrong answer</string>
    <string name="second_incorrect_answer">Second wrong answer</string>
    <string name="third_incorrect_answer">Third wrong answer</string>
    <string name="question">Question</string>
    <string name="question_number">Question %1$d</string>
    <string name="quiz_name">Quiz name</string>
    <string name="subject">Subject</string>
    <string name="save">Save</string>
    <string name="add_question">Add question</string>
    <string name="create_quiz">Create quiz</string>

    <!-- Results -->
    <string name="you_ve_got">You\'ve got</string>
    <string name="points">Points</string>

    <!-- Popup -->
    <string name="correct">Correct Answer</string>
    <string name="wrong">Wrong Answer</string>

    <!-- Errors -->
    <string name="cannot_add_quiz">Cannot add quiz</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="cannot_login">Cannot login</string>

    <string name="no_subjects">You have no subjects.\n Please click <b>+</b> to add new subject.</string>
    <string name="network_error">Network error</string>

    <!-- Exit dialog -->
    <string name="are_you_sure">Are you sure you want to exit? Your result will be submitted and you won\'t be able to take this quiz again.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
