<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeStudentFragment"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_quizzes"
            android:icon="@drawable/ic_menu_quiz"
            android:title="@string/menu_quizzes" />
        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_menu_quiz"
            android:title="@string/subjects" />
        <item
            android:id="@+id/loginFragment"
            android:icon="@drawable/ic_menu_quiz"
            android:title="@string/log_out" />
    </group>

</menu>
